feat: add daily backups with 7-day retention
- Creates point-in-time snapshots at backups/{date}/users/{userId}/
- Runs automatically in cron (idempotent, once per day)
- Keeps last 7 days of backups
- New admin endpoints:
  - GET /debug/admin/backups - list available backup dates
  - POST /debug/admin/backups/run - trigger backup manually
  - POST /debug/admin/users/:userId/restore - restore from backup

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -55,6 +55,9 @@
       "new_sqlite_classes": ["Sandbox"],
       "tag": "v2",
     },
+    {
+      "tag": "v3",
+    },
   ],
   // R2 bucket for persistent storage (moltbot data, conversations, etc.)
   "r2_buckets": [
